--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ theme: minima
 
 plugins:
   - jekyll-feed
-  - jekyll-paginate
+#  - jekyll-paginate
   - jekyll-seo-tag
   - jekyll-sitemap
 
@@ -44,4 +44,4 @@ header_pages:
 #
 show_excerpts: true
 
-paginate: 20
+# paginate: 20
