--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ plugins:
   - jekyll-feed
 #  - jekyll-paginate
   - jekyll-seo-tag
-  - jekyll-sitemap
+#  - jekyll-sitemap
 
 # Theme-specific settings
 
