--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ theme: minima
 
 plugins:
   - jekyll-feed
-#  - jekyll-paginate
+  - jekyll-paginate
   - jekyll-seo-tag
-#  - jekyll-sitemap
+  - jekyll-sitemap
 
 # Theme-specific settings
 
@@ -44,4 +44,4 @@ header_pages:
 #
 show_excerpts: true
 
-# paginate: 20
+paginate: 20
