--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,8 @@ description: Gnome Sayings, by Noam Saenz
 
 theme: minima
 
+url: "https://www.department21.org" # the base hostname & protocol for your site
+
 plugins:
   - jekyll-feed
   - jekyll-paginate
