--- a/_config.yml
+++ b/_config.yml
@@ -5,19 +5,15 @@ author:
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
+
 description: Gnome Sayings, by Noam Saenz
 
 # Build settings
 
-# If you clone the Minima repo and build locally, use this setting.
 theme: minima
 
-# As of November 2023, GitHub Pages still uses Minima 2.5.1 (https://pages.github.com/versions/).
-# If you want to use the latest Minima version on GitHub Pages, use the following setting and
-# add a line comment on "theme: minima" above.
-remote_theme: jekyll/minima
-
 # the base hostname & protocol for your site
+
 url: "https://www.department21.org"
 
 plugins:
@@ -28,18 +24,19 @@ plugins:
 
 # Theme-specific settings
 
-# If you want to link only specific pages in your header, use this and add the path to the pages
-# in order as they should show up.
+minima:
+  skin: auto
+
+# If you want to link only specific pages in your header, uncomment this
+# and add the path to the pages in order as they should show up.
+
 header_pages:
   - about.md
   - links.md
   - search.html
 
 # Set to `true` to show excerpts on the homepage.
-show_excerpts: true
 
-# Minima specific settings, which are only available from Minima 3.0 onward.
-minima:
-  skin: classic
+show_excerpts: true
 
 paginate: 20
